Add EKG to server

--- a/fission-web-server/package.yaml
+++ b/fission-web-server/package.yaml
@@ -152,6 +152,7 @@ dependencies:
   - hostname
 
   ## Web ##
+  - ekg-core
   - http-client
   - http-client-tls
   - http-media
@@ -163,6 +164,7 @@ dependencies:
   - servant-auth-swagger
   - servant-client
   - servant-client-core
+  - servant-ekg
   - servant-server
   - servant-swagger
   - servant-swagger-ui-redoc
