--- a/fission-web-server/package.yaml
+++ b/fission-web-server/package.yaml
@@ -1,5 +1,5 @@
 name: fission-web-server
-version: '2.14.1.0'
+version: '2.15.0.0'
 category: API
 author:
   - Brooklyn Zelenka
@@ -158,6 +158,7 @@ dependencies:
   - http-types
   - ipfs
   - raven-haskell
+  - req
   - servant
   - servant-auth-server
   - servant-auth-swagger
